--- a/app/views/prototypes/_prototype.html.erb
+++ b/app/views/prototypes/_prototype.html.erb
@@ -5,8 +5,9 @@
     <p class="card__summary">
       <%= prototype.catch_copy %>
     </p>
-    <%= link_to prototype.user.name, root_path, class: :card__user %>
+    <%= link_to prototype.user.name, "/users/#{prototype.user.id}", class: :card__user %>
   </div>
 </div>
 
  <%# <%= link_to "#{image_tag(prototype.image, class: :card__img)}",root_path %>
+ <%# "/users/#{prototype.user.id}" %>
